# ai-web-os

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
abi/: aiwos_abi.h
apps/browser-digital-twin/: aiwos_core.wasm  index.html  package-lock.json  package.json
apps/browser-digital-twin/public/core/: aiwos_core.wasm
apps/browser-digital-twin/src/: App.css  App.tsx  simulatedHardware.ts  types.ts  wasmCore.ts
apps/browser-digital-twin/src/components/: Controls.tsx  CoreSnapshot.tsx  RuntimeLog.tsx  SchedulerStats.tsx  SimulatedHardware.tsx  TaskPanel.tsx
apps/native-hello/: CMakeLists.txt  main.c
core/: CMakeLists.txt  Cargo.toml
core/include/: core_api.h  scheduler.h
core/src/: aiwos_module.c  core_logic.c  lib.rs  scheduler.c  tests.rs
core/tests/: README.md  test_abi.c  test_core.c  test_framework.c  test_framework.h  test_scheduler.c
docs/: ROADMAP.md
hal/native/: CMakeLists.txt
hal/native/include/: hal_native.h
hal/native/src/: hal_native.c
